--- a/style/estilo.css
+++ b/style/estilo.css
@@ -84,7 +84,7 @@ header {
 .navigation a {
   text-decoration: none;
   text-transform: uppercase;
-  color: black;
+  color: white;
   font-weight: bold;
 }
 .navigation button {
@@ -101,6 +101,9 @@ header {
 footer {
   background-color: #6B728E;
 }
+footer h2 {
+  color: black;
+}
 footer ul {
   display: flex;
   justify-content: space-evenly;
@@ -114,6 +117,8 @@ footer p {
   justify-content: flex-end;
   align-items: center;
   margin-bottom: 0;
+  margin-right: 1%;
+  color: black;
 }
 
 /* MAP - GET */
@@ -151,6 +156,7 @@ footer p {
 /* Estilos MAIN */
 main {
   background-color: #474E68;
+  overflow-x: hidden;
 }
 
 .intro {
@@ -213,7 +219,6 @@ main {
 /* Estilo para sección de formulario */
 .ask {
   grid-area: ask;
-  width: auto;
   background-color: #50577A;
   display: flex;
   justify-content: space-evenly;
@@ -419,6 +424,14 @@ main {
   display: grid;
   grid-template-areas: "intro intro intro intro" "pilar1 moralAr moralAr pilar2" "ask ask ask ask";
 }
+.mainContainer h3 {
+  font-size: 2rem;
+  font-weight: bold;
+}
+.mainContainer h2 {
+  font-size: 2rem;
+  font-weight: bold;
+}
 
 /*MEDIA QUERIES*/
 /* VERSIÓN TABLETA */
@@ -489,8 +502,10 @@ main {
   }
   .moralArticle {
     width: auto;
+    margin-left: 2rem;
+    margin-right: 2rem;
     margin-left: 30px;
-    margin-top: 10px;
+    margin-top: 1rem;
   }
   .ask {
     display: flex;
