--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,6 +2,9 @@
 @import "variables.scss";
 footer {
     background-color: $c_footer;
+    h2 {
+        color: black;
+    }
 
     ul {
         display: flex;
@@ -18,5 +21,7 @@ footer {
         justify-content: flex-end;
         align-items: center;
         margin-bottom: 0;
+        margin-right: 1%;
+        color: black;
     }
 }
