--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -40,11 +40,11 @@ header {
     padding-top: 5px;
     z-index: 2;
     opacity: 95%;
-
+    
     a {
         text-decoration: none;
         text-transform: uppercase;
-        color: black;
+        color: white;
         font-weight: bold;
     }
 
