estilo a botones, modificacion logo y otros ajustes finos

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -3,7 +3,7 @@
 footer {
     background-color: $c_footer;
     h2 {
-        color: black;
+        color: white;
     }
 
     ul {
@@ -22,6 +22,6 @@ footer {
         align-items: center;
         margin-bottom: 0;
         margin-right: 1%;
-        color: black;
+        color: white;
     }
 }
