--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -16,24 +16,21 @@ main {
     height: 80vh;
     width: 100vw;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-
-    color: white;
     text-align: center;
     font-size: 2rem;
     font-weight: bold;
     text-shadow: 2px 2px 2px black;
 
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    
     div {
         @extend .colCentered;
-        margin-left: 5%;
-    }
-
-    h2 {
-        font-size: 3rem;
+        justify-content: center;
+        margin-left: 2%;
+        margin-top: 2%;
     }
 }
 
@@ -79,6 +76,7 @@ main {
         width: 400px;
         display: block;
         @include linkVisited;
+        @include margins(tb, 2rem);
     }
 }
 
@@ -89,6 +87,7 @@ main {
     width: 600px;
     height: auto;
     @include border-color(black);
+    @include margins(tb, 2rem);
     border-radius: 4px;
     padding: 4px;
 
@@ -139,15 +138,12 @@ main {
         @extend .rowCentered;
         align-items: center;
         @include margins(t, 1rem);
-
+        
         input {
-            background-color: rgba(50, 50, 50, 0.2);
             @include border-color(#2b023b);
             @include margins (all, 10px);
-            font-size: 1rem;
             padding: 4px;
-            font-weight: bold;
-            cursor: pointer;
+            @include button;
         }
     }
 
@@ -289,6 +285,12 @@ main {
             margin-top: 1rem;
             height: 270px;
         }
+        a {
+            @include button;
+            text-decoration: none;
+            font-size: 0.8rem;
+            padding: 0.5rem;
+        }
     }
 
     .card-body {
@@ -298,8 +300,6 @@ main {
     }
 }
 
-
-
 /* ---------GRID------------ */
 
 /* VERSIÓN DE ESCRITORIO */
@@ -308,7 +308,7 @@ main {
 
 .headerContainer {
     display: grid;
-    grid-template-areas: "logo hello hello hello hello" "logo nav nav nav nav";
+    grid-template-areas: "logo hello hello hello hello hello hello" "logo nav nav nav nav nav nav";
 }
 
 /* GRID AREA MAIN de index.html */
@@ -317,16 +317,11 @@ main {
     display: grid;
     grid-template-areas: "intro intro intro intro" "pilar1 moralAr moralAr pilar2" "ask ask ask ask";
 
-    h3 {
-        font-size: 2rem;
-        font-weight: bold;
-    }
     h2 {
         font-size: 2rem;
         font-weight: bold;
     }
 }
-
 
 /*MEDIA QUERIES*/
 
@@ -396,11 +391,11 @@ main {
 
         div {
             h2 {
-                margin-top: 10px;
+                margin-top: 0.5rem;
             }
 
             * {
-                font-size: 20px;
+                font-size: 1rem;
             }
         }
     }
@@ -428,10 +423,11 @@ main {
         flex-direction: column;
         align-items: center;
         justify-content: space-evenly;
+        padding: 2rem;
 
         article {
             width: auto;
-            margin: 20px 50px 20px 50px;
+            margin-bottom: 2rem;
             text-align: center;
         }
 
@@ -440,7 +436,7 @@ main {
     .askAside {
         width: auto;
         height: auto;
-        font-size: 10px;
+        font-size: 1rem;
 
         .form .fila {
             display: flex;
@@ -486,3 +482,4 @@ main {
         background-size: cover;
     }
 }
+
