logo nuevo y z-index tienda 2

--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -275,8 +275,10 @@ main {
     @extend .rowCentered;
     align-items: center;
     justify-content: space-evenly;
+    position:initial;
 
     .card {
+        position: relative;
         margin: 20px;
         z-index: 4;
         background-color: $c_section3;
