--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -210,6 +210,7 @@ main {
         text-align: center;
         background-color: #3d3546;
         color: white;
+        z-index: 1;
 
         img {
             margin-top: 1rem;
